--- a/BetSpider/BetSpider.csproj
+++ b/BetSpider/BetSpider.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Parser\Basketball\BasketballParser_Yabo.cs" />
     <Compile Include="Parser\Basketball\BasketballParser_Yayou.cs" />
     <Compile Include="Parser\ESport\ESportParser.cs" />
+    <Compile Include="Parser\ESport\ESportParser_188.cs" />
+    <Compile Include="Parser\ESport\ESportParser_Shaba.cs" />
     <Compile Include="Parser\ESport\ESportParser_Yayou.cs" />
     <Compile Include="Parser\ESport\ESportParser_Yabo.cs" />
     <Compile Include="Parser\ParseFactory.cs" />
