--- a/BetSpider/BetSpider.csproj
+++ b/BetSpider/BetSpider.csproj
@@ -63,7 +63,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Item\Define.cs" />
     <Compile Include="Item\LogInfo.cs" />
     <Compile Include="Item\Item.cs" />
     <Compile Include="MainForm.cs">
@@ -95,6 +94,7 @@
     <Compile Include="Tool\Util.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
