--- a/BetSpider/BetSpider.csproj
+++ b/BetSpider/BetSpider.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Parser\Basketball\BasketballParser_Yabo.cs" />
     <Compile Include="Parser\Basketball\BasketballParser_Yayou.cs" />
     <Compile Include="Parser\ESport\ESportParser.cs" />
+    <Compile Include="Parser\ESport\ESportParser_Fanya.cs" />
     <Compile Include="Parser\ESport\ESportParser_188.cs" />
     <Compile Include="Parser\ESport\ESportParser_Shaba.cs" />
     <Compile Include="Parser\ESport\ESportParser_Yayou.cs" />
