--- a/Splash/Splash.csproj
+++ b/Splash/Splash.csproj
@@ -120,7 +120,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="gambling.ico" />
+    <Content Include="Resources\gambling.ico" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\run.ico" />
   </ItemGroup>
@@ -140,9 +143,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="gambling.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
