1.优化日志更新界面。 2.增加UWIN爬取解析。 3.修复UWIN未抓取时间的bug. 4.若获取队伍配置错误，该网站不计入此次打水的网站列表。

--- a/Splash/Splash.csproj
+++ b/Splash/Splash.csproj
@@ -67,8 +67,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Item\LogInfo.cs" />
+    <Compile Include="Log\DebugLog.cs" />
     <Compile Include="Item\Item.cs" />
+    <Compile Include="Log\UpdateLog.cs" />
     <Compile Include="Parser\DynamicData.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
@@ -163,9 +164,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Log\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
